Add per-exercise set option settings
